shifting cultural summary

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -543,27 +543,8 @@ These new patterns or elements of patterns sometime introduced new concepts and 
 While the use of some concepts can be seen as intentional affordance of the introduced design, some appear as a product of participants' funds of home knowledge. The concept of safe zone here has been transferred from the cultural experience of one participant in game playing into this community of game makers.
 
 
-### Perhaps  add here a summary of cultural section if useful
+### Perhaps add here a very brief summary of cultural section if useful
 
-The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
-
-The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism.  
-
-At times, activity crosses between cultural and pair guided processes  - DEVELOP HOW
-- the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
-- individual requests and implementations can spread via playtesting
-- the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
-
-IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
-Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
-The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
-- Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
-- The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
-- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
-
-
-The cultural aspects of the learning community are further explored in Chapter 7.
-Is there something that merits mentioning here as a link withing Ch.7?
 
 
 ## GDPs used in the process of guided participation (Target 2500)
@@ -655,12 +636,9 @@ The design chapter explored the tension between reduced choice of genre of game.
 <!-- The reduction on the length of the course was welcome show by Ma's comment. "It did go on for too long." -->
 
 
-
-
-
 #### Knowledge of game design patterns used to stimulate and communicate new ideas
 
-In the following example home-base knowledge is utilised to help shape new design ideas and problem solving practices. Dave and Toby are working closely as a pair.  The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
+In the following example from vignette 7, home-base knowledge is utilised to help shape new design ideas and problem solving practices. Dave and Toby are working closely as a pair.  The following interaction shows a rich interchange where the parent is trying to draw on the game playing experiences to promote innovation in the design of the existing template.
 
 
 <!-- THIS IS STRONGLY LINKED WITH IDEATION - PERHAPS MOVE THERE. -->
@@ -673,49 +651,7 @@ In the following example home-base knowledge is utilised to help shape new desig
 
 Dave invites thinking outside of the constraints of the suggested design early in this first session. In this example the family bring their knowledge of game play patterns and genre conventions and more broadly experience and a perspective of coding as a creative challenge to the activity.
 
-<!--
-The following exchange shows how the use of GDPs help participants navigate the professional practice of forking a codebase and the exploration of developer resources. Technically, he has the courage to divert from the existing game paradigm from platform to maze. Practically it brings up issues as many of the dominant game design patterns are different. Thus the first one they identify that of enemy following is not present in the current menu of choices.
-
-THIS IS  LINKED WITH discuSSION - PERHAPS MOVE THERE.
-
-Toby adopts with this suggestion readily once he understands Da's suggestion. He then approaches Mick with a suggestion.
-
-    Toby: You could have a game where every 15 seconds 10 seconds you could add and enemy to such and such a random number between such and such (holds up hands to indicate parameters). You could block it somewhere.
-    Dave: So instead of.. instead of the world… the world being sideways. We could have the world being looked down on. (reindicates the change of perspective)
-    Toby: Hmm. How should I do this then?
-    Dave: That’s a good question. Shall we ask Mick to see if that would mess things up or not?
-    Toby: Mick
-    Mick: Hi ya.
-    Toby: Erm. Thinking about what game to do . I was thinking can we make like a Pac-man game kind of thing (indicates movement of character with hands)
-    Dave: If we had an on the top game rather than a platform game
-    Mick: I think it could work. You could kind of adapt that game by, kind of, removing gravity.
-    Dave: and see what happens?
-    Mick: and see what happens.
-
-
-LOA FROM COMPUTING PEDAGOGY RELEVANT HERE - WHERE ELSE ARE THEY EXPLORED?
-
-Dave  expresses his desire to for the pair to try something new by implementing a pattern not in the menu of GDPs provided. Their new choice is a change of perspective which involves a new game pattern of a new movement game mechanic. The specific proposal is to remove a jumping game mechanic and using a 2D top down movement mechanic used in maze and adventure games (e.g. Pac-man and Zelda games).
-
-Toby takes on the role of checking these change of direction with me. He uses a concrete example of a game to indicate the shift of genre and games space structure implied, saying "I was thinking can we make like a pacman game kind of thing". Dave  is more explicit naming the shift of perspective and genre. Mick takes this to a concrete code level by making reference to a key change of code that would be involved.
-
-The decision to divert from the existing meny of GDPs and genre can be triangulated with interview data from Dave  on the motivation behind his involvement in volunteering at Coder Dojos.
-
-PERHAPS DROP THIS QUOTE OR WORK OUT HOW TO BETTER INTEGRATE IT?
-
-    Honestly, it's just it's just my hobby and I love it is the main reason. In fact, it's probably the only reason. If I can, if I can persuade / cajole / trick my kids into being involved at the same time, then that's even better. Personally, I think that's about it. I've always been interested in computers. I love, I love, I love programming. I'm no good at pencils and pens drawing or anything like that. But writing software is the closest I get to a creative outlet. So I just love doing that.
-
-Given this additional perspective, I interpret Da's influence to divert as a way of embracing a creative challenge and bringing his child along for the ride. However, Dave  is also aware of potential challenges of straying too far from the template. He does not want to "mess things up".
-
-A BIT ON FORKING ISSUES - TO EXPLORE LATER MOVE BELOW TO DISCUSSION?
-
-This tension has a parallel to a professional practice of "forking" code-bases in open-source code communities. The practice of forking can involve taking a code base in a new direction and the benefits of adaption may be out-weighed by disadvantages including the friction involved in splitting an existing community and duplication of effort. The parent checking with a Mick a guiding community member about the advantages and disadvantages of a major fork in the code structure mirrors this professional tension.
-
-This example shows that while the use of GDP can help support choices within a frame, there is also the ability to break out of that restriction and keep some of the benefits of the shared code base.
-
-My own positive response to their suggestion was driven partly from knowledge of Da's cultural background a both a professional coding and a volunteer supporting children's coding programmes. While simultaneously checking with other groups that they use the starting template as a base, to avoid overload as previously discussed in design decisions, I encourage this pair to see what happens as a potential learning opportunity. I am conscious that the change of movement may open up different possibilities for new game patterns that this pair may be able to solve. This outweighs the possibility that the pair will get bogged down in complex code problems or structures which may be beyond the capacity of the young person. After all even if they encounter father must solve, the apprentice does not need to understand everything in order to benefit from observing the master at work.
- -->
-
+Additional interpretation in commentary in Vignette 7.
 
 #### The use of GDPs to encourage intuitive and visual prototyping
 
@@ -786,7 +722,7 @@ NOTE - TO DEVELOP AFTER MORE ANALYSIS OF VIDEO DATA.
 The use of GDPs to scaffold the ideation process was a common pattern used by X of the Y sessions analysed.
 
 
-### GDPs aiding the process of organisation and division of labour (1800)
+### GDPs aiding the process of organisation and division of labour (1400)
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE NEXT CHAPTER TOO - REWRITE BASED ON GDP ONLY CONTENT
 CHECK FOR OVERLAP-->
@@ -872,7 +808,7 @@ This example sees Dan(p) shifting the kind of helping role as he progresses thro
 
 In several interchanges the father starts as a facilitator taking a lead from the direction of the child. As the child reaches the limits of their ability he begins to be more directive, by asking leading questions and testing existing knowledge. Finally, in order to complete the programming or research tasks beyond of the child's knowledge, the father is more direct in instruction, directing the research and proposing a coding solution for their new game design pattern.
 
-While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section. 
+While the helping pattern of accessing the repetoire of researching and accessing technical documentation is available to all pairs, due to the level of skill and experience involved, other technical processes are developed by most participants and are explored in the next section.
 
 <!-- NOTE - DIVISION OF LABOUR IS IN THE PREVIOUS CHAPTER TOO - REWRITE BASED ON GDP ONLY CONThTENT -->
 
@@ -1192,6 +1128,31 @@ In computing eduction pattern based instruction has benefits of making complex p
 The processes described above align with PBL and UDL in a way that merits further investigation in different settings.
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
+
+### A summary of cultural section if useful - MOVED FROM ABOVE. 
+
+The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
+
+The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism. More recent work by guitierez describes this as development of repetoires.
+
+At times, activity crosses between cultural and pair guided processes  - DEVELOP HOW
+- the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
+- individual requests and implementations can spread via playtesting
+- the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
+
+IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
+Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
+I propose that the link between the MDA framework and main areas of GDPs can be used to deepen a possibily profitable connection to professional practices?
+
+The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
+- Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
+- The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
+- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
+
+Recalling that cite one of the challenges of learning coding
+
+The cultural aspects of the learning community are further explored in Chapter 7.
+Is there something that merits mentioning here as a link withing Ch.7?
 
 
 
