--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1006,33 +1006,6 @@ In this discussion section, I propose that GDPs provide learners with a suitable
 
 I also explore GDPS as a mediational strategy using AT concepts.
 
-### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
-
-The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
-
-In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
-
-TO ADD - The MDA framework , and related work on game design frameworks bring a focus to levels of abstraction. The utility LOA is promoted by Waite and Sentence in a focus of computing education [INSERT HOW AND WHY]. While, I chose not to explore this explicitly in my teaching, one potential avenue to explore is the question, is the design helping participants to make their concrete knowledge potentially transferable to other problems?
-
-Around this abstract different behaviour patterns form
-And the concept can be embodied on design artefacts
-And can be observed an designed for.
-
-In terms of a research process, this maps in part to the inductive process of thematic analysis.
-<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
-
-From the perspective of participants and facilitators, the process can be transferred to other design projects
-
-    There are two types of abstractions: empirical and theoretical. Empirical abstraction
-    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
-    Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
-
-
-
-
-<!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
-
-
 ### Design patterns as a intermediate-level, pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
@@ -1068,9 +1041,50 @@ In professional coding environment and training programmes design patterns are s
 
 Similarly, here the implementation of GDPs as a key unit of activity and analysis for this study, the justification being that it was at this level that richest use and development of tools and processes by the emerging community took place.
 
-The observations of this chapter show the advantages of GDP as an intermediate design concept, hovering in the space between too concrete to be repeated and too abstract to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate  communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
 
+
+
+### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
+
+The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
+
+In this study, experience of the features and behaviour of game are concrete. The concept of design pattern that can be applied to more than one game is more abstract. And more abstract still are computing concepts like abstraction and pattern recognition which are present in the game code and problem solving processes.
+
+MOVE LATER WORK ON MDA HERE
+IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
+Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
+I propose that the link between the MDA framework and main areas of GDPs can be used to deepen a possibily profitable connection to professional practices?
+
+The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
+- Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
+- The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
+- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
+
+
+
+TO ADD - The MDA framework , and related work on game design frameworks bring a focus to levels of abstraction. The utility LOA is promoted by Waite and Sentence in a focus of computing education [INSERT HOW AND WHY]. While, I chose not to explore this explicitly in my teaching, one potential avenue to explore is the question, is the design helping participants to make their concrete knowledge potentially transferable to other problems?
+
+Around this abstract different behaviour patterns form
+And the concept can be embodied on design artefacts
+And can be observed an designed for.
+
+In terms of a research process, this maps in part to the inductive process of thematic analysis.
+<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
+
+From the perspective of participants and facilitators, the process can be transferred to other design projects
+
+    There are two types of abstractions: empirical and theoretical. Empirical abstraction
+    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
+    Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
+
+
+
+
+<!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
+
+
+### Synthesis between intermediate and emprirical perspectives.
 
 Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
 
@@ -1083,8 +1097,13 @@ There are challenges of the use of these short cuts and at a more general the de
 
 
 
+
+
 ### Implications and beginnings of suggestions for practitioners  -
 
+
+
+The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
 NOTE - SUPPORT NEEDED FOR SOME OF THE BELOW - AND MORE DISCUSSION NEEDED ON CHALLENGE IN GENERAL
 
@@ -1129,7 +1148,7 @@ The processes described above align with PBL and UDL in a way that merits furthe
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
-### A summary of cultural section if useful - MOVED FROM ABOVE. 
+### A summary of cultural section if useful - MOVED FROM ABOVE.
 
 The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
 
@@ -1139,15 +1158,6 @@ At times, activity crosses between cultural and pair guided processes  - DEVELOP
 - the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
 - individual requests and implementations can spread via playtesting
 - the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
-
-IS THIS REALLY CULTURAL ? - IF SO HOW - OR CHANGE THE FRAMING
-Linking to wider cultural activity beyond this learning intervention, the analysis of this chapter highlights dimension of the use of GDPs on a cultural level that also exist in formal analysis of game design frameworks [Salen, and MDA].
-I propose that the link between the MDA framework and main areas of GDPs can be used to deepen a possibily profitable connection to professional practices?
-
-The varied use of the collection and individuals gameplay patterns and concepts, can be examined using the lenses of the MDA framework.  
-- Home knowledge of mechanics drove many of the requests for GDPs from popular medium of retro games  
-- The norming practices often focus on the game feel, which relates most directly to the dynamics lens.  
-- Aesthetics and the end user experience motivated some users greatly, while it is not clear if this game code changes in this dimensions fully constitute a gameplay design pattern, they are an important inclusive element of the design.
 
 Recalling that cite one of the challenges of learning coding
 
