use of theoretical framework.

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1006,6 +1006,23 @@ In this discussion section, I propose that GDPs provide learners with a suitable
 
 I also explore GDPS as a mediational strategy using AT concepts.
 
+In terms of a research process, this maps in part to the inductive process of thematic analysis.
+<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
+
+From the perspective of participants and facilitators, the process can be transferred to other design projects
+
+    There are two types of abstractions: empirical and theoretical. Empirical abstraction
+    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
+    Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
+
+<!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
+
+
+In this research, the empirical level of analysis outlines the listing of features which can be added to game, and categorisation into groups based around MDA framework. Moving beyond this empirical categorisation towards a theoretical aspect, the germ cell of the Gameplay Design Pattern becomes more theoretical and generalisable in the varied uses as meditational strategies and as integrated into varied forms of creative cultural and interpersonal repertoires. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.
+
+While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. 
+
+
 ### Design patterns as a intermediate-level, pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
@@ -1069,22 +1086,9 @@ Around this abstract different behaviour patterns form
 And the concept can be embodied on design artefacts
 And can be observed an designed for.
 
-In terms of a research process, this maps in part to the inductive process of thematic analysis.
-<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
-
-From the perspective of participants and facilitators, the process can be transferred to other design projects
-
-    There are two types of abstractions: empirical and theoretical. Empirical abstraction
-    is a classification of superficial features of phenomena. Theoretical abstraction refers to the identification of the genetic origins of phenomena that may externally be not alike at all. A theoretical abstraction is based on a functional relationship, also called a germ cell.  While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction. Theoretical abstraction allows one to generate and project complex, theoretically mastered concrete manifestations and developmental forms of the reality under scrutiny
-    Title: Activity theory as an activist and interventionist theory, Author: Sannino, Date: 10/2011
 
 
-
-
-<!-- A deeper exploration of other concepts may suit another chapter looking at synthesing observations in relation to broader research.  -->
-
-
-### Synthesis between intermediate and emprirical perspectives.
+### Synthesis between intermediate and empirical/theoretical perspectives.
 
 Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
 
