--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1020,8 +1020,9 @@ From the perspective of participants and facilitators, the process can be transf
 
 In this research, the empirical level of analysis outlines the listing of features which can be added to game, and categorisation into groups based around MDA framework. Moving beyond this empirical categorisation towards a theoretical aspect, the germ cell of the Gameplay Design Pattern becomes more theoretical and generalisable in the varied uses as meditational strategies and as integrated into varied forms of creative cultural and interpersonal repertoires. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.
 
-While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects. 
+While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.
 
+I propose design patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing. 
 
 ### Design patterns as a intermediate-level, pedagogical framework
 
