--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1000,16 +1000,17 @@ THIS SECTION NEEDS DEVELOPMENT AND COMPLEXIFICATION IN RELATION TO EXISTING RESE
 
 ## Discussion
 
-The majority of this chapter has focused on interpretation of observations of participant interactions with different dimensions of use of GDPS.  
+The majority of this chapter has focused on interpretation of observations of participant use of GDPS as a mediational strategy / repertoire.
 
-In this discussion section, I propose that GDPs provide learners with a suitable vehicle to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures. I explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
+In this discussion section, I:
 
-I also explore GDPS as a mediational strategy using AT concepts.
+- propose that GDPs provide a suitable way to engage with coding practices partly due to their position between abstract computational concepts and concrete implementations of code structures.
 
-In terms of a research process, this maps in part to the inductive process of thematic analysis.
-<!-- See - https://atlasti.com/research-hub/in-vivo-coding -->
+- explore potential implications for facilitators and researchers on use of GDP collection as an  intermediate pedagogical construct.
 
 
+
+### Discussion of findings in relation to CHAT conceptions of abstraction
 
 "While observation and categorization are actions at the root of empirical abstraction, practical transformation, change, and experimentation are actions at the root of theoretical abstraction" [@sannino_activity_2011].
 
@@ -1022,7 +1023,7 @@ Title: Activity theory as an activist and interventionist theory, Author: Sannin
 
 In this research, the empirical level of analysis outlines the listing of features which can be added to game, and categorisation into groups based around MDA framework. Moving beyond this empirical categorisation towards a theoretical aspect, the germ cell of the Gameplay Design Pattern becomes more theoretical and generalisable in the varied uses as meditational strategies and as integrated into varied forms of creative cultural and interpersonal repertoires. It is this movement from a kernel idea into varied concrete instances that is the root of the power of the approach according to CHAT scholars.
 
-As to way it is useful. 
+As to way it is useful.
 From the perspective of participants and facilitators, the process can be transferred to other design projects
 
 While understanding the process is more obviously useful for faciliators - it may be helpful to participants as well as they build familiarity with frameworks of features of multimedia projects.
@@ -1030,7 +1031,7 @@ While understanding the process is more obviously useful for faciliators - it ma
 
 I propose design patterns as a more relatable abstract framework than more abstract interpretations of computational thinking following Wing.
 
-### Design patterns as a intermediate-level, pedagogical framework
+#### Design patterns as a intermediate-level, pedagogical framework
 
 <!-- NOTE - PARTS OF THIS WERE MOVED TO THE LIT REVIEW. -->
 
@@ -1069,7 +1070,7 @@ Similarly, here the implementation of GDPs as a key unit of activity and analysi
 
 
 
-### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
+#### Concrete and relatable levels of abstraction - linking this communities experiences with existing literature
 
 The process of identifying and working with GDPs in this research process can be mapped as a dialectical process of moving (rising) to the concrete [@sannino_activity_2011].
 
@@ -1095,7 +1096,7 @@ And can be observed an designed for.
 
 
 
-### Synthesis between intermediate and empirical/theoretical perspectives.
+#### Synthesis between intermediate and empirical/theoretical perspectives.
 
 Previously abstract concepts or processes become concrete through familiarisation via direct use and indirect observations through community participation. In many of the outlined uses of GDPs in chapter we can see processes at play that help bridge shifts in design perspective (MDA here?).
 
@@ -1107,12 +1108,39 @@ Game design patterns or their fragments are used as a form of design short cuts.
 There are challenges of the use of these short cuts and at a more general the design choice to lead with a menu of intermediate-level constructs in the form of a menu of GDPs. There may be confusion over use of terms to new comers and these GPD related terms may hide more complex patterns within the name. For example, the shortcuts in Mark and Ed's interaction hides a large amount of problems solving which seems "overwhelming". GDPs can limit the ideation process through an accelerated approach. Also as the menus themselves are not all used by students, and while GDPs do propagate from student to student, which risk further constraints on the process of asking questions about user experience and exploring ideas before committing to implementation.
 
 
+### A discussion of aspects of culture, home interests and evolving participation in an idioculture
 
+The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
+
+The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism. More recent work by guitierez describes this as development of repetoires.
+
+At times, activity crosses between cultural and pair guided processes  - DEVELOP HOW
+- the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
+- individual requests and implementations can spread via playtesting
+- the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
+
+Recalling that cite one of the challenges of learning coding
+
+The cultural aspects of the learning community are further explored in Chapter 7.
+Is there something that merits mentioning here as a link within Ch.7?
+
+#### Tensions between facilitating agency and norming practices -
+
+<!-- MOVE  up OR COMPRESS INTO THIS CHAPTER - OR AS A LINK TO NEXT CHAPTER IN CONCLUSION ? -->
+
+Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
+
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
+
+<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
+
+
+<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
+
+SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 
 ### Implications and beginnings of suggestions for practitioners  -
-
-
 
 The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
@@ -1159,41 +1187,6 @@ The processes described above align with PBL and UDL in a way that merits furthe
 
 <!-- NOTE - Lots of work on pedagogy of e learning done - but now seems quite dated? How did it stand up to time?  -->
 
-### A summary of cultural section if useful - MOVED FROM ABOVE.
-
-The link to home interests and funds of knowledge is demonstrated in varied ways which enrich the development of a community idioculture which is inclusive and productive in terms of the practicalities of learning how to make games.
-
-The work of Rogoff and Wegner and Lave has guided the surfacing activity in the  such as legitimate peripheral participation, community norming and taking on roles of specialism. More recent work by guitierez describes this as development of repetoires.
-
-At times, activity crosses between cultural and pair guided processes  - DEVELOP HOW
-- the role of playtesting as a medium for cultural exchange and a ground in which culture grows in of note
-- individual requests and implementations can spread via playtesting
-- the immediacy of designing for other is used by parents or children to norm behaviour in inter-personal interactions.  
-
-Recalling that cite one of the challenges of learning coding
-
-The cultural aspects of the learning community are further explored in Chapter 7.
-Is there something that merits mentioning here as a link withing Ch.7?
-
-
-
-#### Tensions between facilitating agency and norming practices - MOVE  up OR COMPRESS INTO THIS CHAPTER - OR AS A LINK TO NEXT CHAPTER IN CONCLUSION ?
-
-Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
-
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
-
-<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
-
-
-<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
-
-SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
-
-
-
-## Chapter Conclusion
-
 ### Simple table of uses
 
 | Participants use of Game Design Patterns (GDPs) from thematic analysis of video data                   |                                                                                                  |
@@ -1217,6 +1210,12 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 This table can be developed by adding a column  use perspective of agency and affordances in processes)"
 
 GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
+
+
+
+
+## Chapter Conclusion
+
 
 
 ### Transition to next chapter
