--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -933,7 +933,13 @@ Toby to find patterns and to duplicate them in different situations.
 <!--
  Also the knowledge of the GDP helps ability to recognise patterns in the code. Left / right -> Up / Down -->
 
+Following Papert and subsequent research on Microworlds, learning designers can shape what they want learners to encounter and explore [MINDSTORMS?]. In Papert's research, the tartget concepts were  mathematical concepts, for example geometry in Turtle computing. The use of x and y allowed a close study of personal dimensions. 
+
+Much research since the popularity of CT, has focused on those aspects, on a personal dimension of learning.
+
 While, this thesis focuses on community aspects in line with my own interests, There are significant possibilities to alter this design to suit more exploration of systems concepts and computational thinking. I have written a chapter which explores these aspects with recommendations for practitioners [@chesterman_game_2023], a summary of which and an additional commentary follows.
+
+
 
 One of my tensions explored in chapter 5 and explored in Appendix.designnarrative2 was between a motivation to align the learning experience of making games to computational thinking.  
 
@@ -982,7 +988,6 @@ EXAMPLE/S:
 
 BRIEF EXAMPLES FROM DATA FOLLOW
 
-Following Papert and subsequent research on Microworlds, learning designers shape what they want learners to encounter and explore [research on Microworlds].
 
 
 <!-- Here learner agency is transformative not only of personal dimensions of learning but also the cultural setting, practices and tools available to learners. The process of playtesting other games allowed participants to share their on emerging interpretations of game making concepts like game feel and challenge without being directly taught. Further, the community sense of what is appropriate of fun evolves as mutually and therefore cannot be taught explicitly. -->
