Moving table about

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1161,23 +1161,12 @@ Recalling that cite one of the challenges of learning coding
 The cultural aspects of the learning community are further explored in Chapter 7.
 Is there something that merits mentioning here as a link within Ch.7?
 
-#### Tensions between facilitating agency and norming practices -
 
-<!-- MOVE  up OR COMPRESS INTO THIS CHAPTER - OR AS A LINK TO NEXT CHAPTER IN CONCLUSION ? -->
-
-Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency.
-
-However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
-
-<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
-
-
-<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
-
-SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 
 ### Implications and beginnings of suggestions for practitioners  -
+
+While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
 
 The observations of this chapter show the advantages of GDP as an intermediate, empirical design framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers. GDPs create a tangible link between concrete player experience and the affordances of a guided creative process. Learners use of GDP as relatable and flexible constructs that facilitate communication, sustaining engagement, planning and division of labour. The creation of designed objects using GDPS aid the personal appropriation and the propagation of technical and social processes game making practices.  
 
@@ -1233,27 +1222,37 @@ The processes described above align with PBL and UDL in a way that merits furthe
 | GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
 | GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
 | GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
+PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW. 
 
-### Summary of the pedagogical opportunities of Game Design Patterns
-
-While their results on the advantages and challenges of patterns use focus principally on the perspective of designers (as a way to frame analysis of the activity and shifting interpretations of pattern interpretations), the participant is also shared. I explore some of the opportunities and challenges they surface addressing learner perspective.
-
-The use of GDPs by participants has been outlined in this chapter. A summary is included in Table 6.x
+The use of GDPs by participants on now presented in summary via in table form.
 
 SUMMARY TABLE HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
 
-This table can be developed by adding a column  use perspective of agency and affordances in processes)"
+## Chapter Conclusion
+
+### Summary of the uses of Game Design Patterns
+
+
+
 
 GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience. Gdps functioned as an _inspirational structured design tool_ Eriksson's study outlines the utility notes teacher observations that GDPs served to stimulate learner imagination and ideation stages. The use of a patterns and their collection as a form _intermediate-level knowledge_ by both researchers and participants is under-explored in this study but builds on related work by two of the authors and is explored in the next part of this chapter.
 
+#### Tensions between facilitating agency and norming practices - REWRITE AS A WAY OF OPENING THIS TOPIC AND CLOSING OFF GDPS
+
+<!-- Participants are able to use the affordances of the existing learning design and add their own evolving practice to them as a way of expressing and building agency. -->
 
 
+This chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared.  While the development of agency has not been the primary focus of this chapter, this processes can be directly linked to Sannino conception of transformative agency through double stimulation (TADS).
 
-## Chapter Conclusion
 
+However, as a seeming counterpoint to this growing agency is the norming effects of concepts that gain community currency in playtesting. The repeated attempts by participants to make the jumping mechanic of Molly less frustrating can be seen as a potential drag on the agency or autonomy of Molly as a designer. However this may be a false dichotomy. Such norming practices can be seen from a different perspective. The following chapter begins with a deeper exploration of learner agency in relation to existing research in this domain.
 
+<!-- Examples of this dynamic agency include the use of graphical code structures, asking for peer or facilitator support etc. -->
+<!-- While the process of direction may be less totally learner-driven approach than the first iteration of the learning design P1, working with a starting menu of game patterns with support still provides challenges to learners and complexity of working processes. Design blockages still occur, and participants have to work with facilitators in depth to overcome issues. There is the possibility to adapt existing patterns, to add new patterns from outside the curated collection or to shift to new game paradigm requiring a different set of patterns altogether. -->
+
+SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 ### Transition to next chapter
 
