--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -1222,7 +1222,7 @@ The processes described above align with PBL and UDL in a way that merits furthe
 | GDPs facilitate learners to design for others                                                          | GDP concepts and language used in informal feedback for peers to influence modification of games |
 | GDPs are propagated into the community through playtesting                                             | GDPs facilitate the use of wider funds of knowledge from home and hobby settings                 |
 | GDPs in the personal appropriation of concepts and processes                                           |                                                                                                  |
-PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW. 
+PERHAPS REPLACE THIS TABLE WITH THE MORE DESCRIPTIVE ONE LINKED BELOW.
 
 The use of GDPs by participants on now presented in summary via in table form.
 
@@ -1256,7 +1256,11 @@ SOME MORE DETAILED SYNTHESIS OF GDP AND AGENCY.
 
 ### Transition to next chapter
 
-This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community. Despite these challenges, research of data overwhelmingly indicates the positive affect of participants in implementation of GDPs. This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. This complements previous observations on the development and nature of agency in this learning design.  The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
+This chapter focused on GDPs which while mostly interpersonal, guided participation also touched on emerging cultural elements of the learning community.
+
+While limited in this respect, data indicated the positive impact on participants in implementation of GDPs?
+
+ This is shown particularly in a growing sense of mastery towards technical processes becoming second nature and the resulting ability to share them with family and other peer groups. This complements previous observations on the development and nature of agency in this learning design.  The next chapter explores cultural aspects in greater detail continuing to explore emergent agency in this design by primarily focusing on a drama process as a lens for analysis.
 
 
 
